monasca: backport Cassandra support
This commit backports the following patches required for
supporting the Cassandra time series database in Monasca:

monasca-api:
  * cassandra-527858.patch: adds metrics retrieval from
    Cassandra and thoroughly overhauls/fixes Cassandra support
    in Devstack.
  * cassandra-auth-533833.patch: adds support for
    authenticated Cassandra access.
  * cassandra-statistics-api-end-time-529788.patch: fixes statistics
    API for unspecified end time.
monasca-agent:
  * monitor-cassandra-538096.patch: adds detection plugin for
    the Cassandra service.
monasca-persister:
  * cassandra-527855.patch: adds support for storing metrics
    in Cassandra.

Change-Id: I17bb8195969eb697d3f126edfc0395bb338c805f

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -34,6 +34,7 @@ Source2:        %{name}.service
 Source3:        %{name}.tmpfiles
 Source4:        %{name}.polkit
 Patch1:         libvirt-aggregate-status.patch
+Patch2:         monitor-cassandra-538096.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('devel') }}
