Add python-memcached dependency to keystonemiddleware
python-memcached is required in Pike by OpenStack
API services that have memcached configured as the token
caching method used for keystonemiddleware.

Change-Id: Id2f5a71379999de50ba8d559556677ff0fcb5a25

--- a/openstack/keystonemiddleware/keystonemiddleware.spec.j2
+++ b/openstack/keystonemiddleware/keystonemiddleware.spec.j2
@@ -44,6 +44,7 @@ Requires:       {{ py2pkg('oslo.serialization') }}
 Requires:       {{ py2pkg('oslo.utils') }}
 Requires:       {{ py2pkg('positional') }}
 Requires:       {{ py2pkg('pycadf') }}
+Requires:       {{ py2pkg('python-memcached') }}
 Requires:       {{ py2pkg('requests') }}
 Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
