keystone: disable config generator test
This commit disables the config generator test for the Keystone
package. The test will only work in a tox generated venv but
fail when tests are run by ostestr: It runs oslo-config-generator
in a shell. This in turn requires python-keystone be available
for oslo-config-generator to use at a time when we haven't
even built, let alone installed, a python-keystone package
yet.

Change-Id: I8de2150cd527491db100703dac165ce950f205bf

--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -201,7 +201,7 @@ exit 0
 %check
 # don't want to depend on hacking for package building
 rm keystone/tests/unit/test_hacking_checks.py
-ostestr
+ostestr --black-regex keystone.tests.unit.test_policy.GeneratePolicyFileTestCase.test_policy_generator_from_command_line
 
 %post
 %tmpfiles_create %{_tmpfilesdir}/keystone.conf
